<resources>
    <string name="app_name">IType</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="descript_logo">logo</string>
    <string name="tiempo">Tiempo : </string>
    <string name="Puntaje">Puntaje : </string>
    <string name="start">Comenzar!</string>
    <string name="sig">Siguiente</string>
    <string name="usuario_prueba_texto">Ingrese el usuario</string>
    <string name="contra_prueba_texto">1234</string>
    <string name="ingresar">Ingresar</string>
    <string name="User2">Usuario : </string>
    <string name="registrar">Registrarse</string>
    <string name="texto_bienvenida">¡Bienvenido a IType!</string>
    <string name="texto_registro">Ingrese un nuevo usuario y contraseña para poder acceder a la aplicación</string>
    <string name="texto_regresoinicio">Volver</string>
    <string name="iniciar_juego">Iniciar juego</string>
    <string name="Sig">Siguiente</string>
    <string name="vel">Score</string>
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="texto_estad">Estadísticas</string>
    <string name="texto_salir_menup">Salir</string>
    <string name="titulo_sel_nivel">Seleccione la dificultad del juego:</string>
    <string name="texto_facil">Fácil</string>
    <string name="VelProm">Velocidad Promedio : </string>
    <string name="VelMax">Velocidad Maxima : </string>
    <string name="Volver">Volver a jugar</string>
    <string name="texto_medio">Medio</string>
    <string name="texto_dificil">Difícil</string>
    <string name="texto_regresoMenu">Volver</string>
    <string name="texto_vEstTitulo">Estadísticas de juego</string>
    <string name="Partidas">Jugadas : </string>
    <string name="texto_vActivaTitulo">¡Juego en marcha!</string>
    <string name="texto_vActivaSalir">Salir</string>
    <string name="texto_perfil">Perfil</string>
    <string name="P1">1</string>
    <string name="P2">2</string>
    <string name="P3">3</string>
    <string name="P4">4</string>
    <string name="P5">5</string>
    <string name="P6">6</string>
    <string name="P7">7</string>
    <string name="P8">8</string>
    <string name="P9">9</string>
    <string name="P10">10</string>
    <string name="menu">Menu</string>
    <string name="volver">Volver</string>
    <string name="Login">Log in</string>
    <string name="User">Usuario</string>
    <string name="Users">Nombre de Usuario</string>
    <string name="Puesto">N°</string>
    <string name="Vel">[wpm]</string>
    <string name="Password">Password</string>
    <string name="CreateUsr">Register now!</string>
    <string name="dificil">Dificil</string>
    <string name="facil">Facil</string>
    <string name="Inicio">Ir al Inicio</string>
    <string name="intermedio">Intermedio</string>
    <string name="UsersOn">N° Usuarios en Linea : </string>
    <string name="selecciondificultad">Seleccione la dificultad</string>
    <string name="puntaje">Puntaje: </string>
    <string name="velocidad">Velocidad: </string>
    <string name="comenzar">¡Comenzar!</string>
    <string name="salir">Salir</string>
    <string-array name="dificultad">
        <item>Facil</item>
        <item>Medio</item>
        <item>Dificil</item>
    </string-array>

</resources>
